# metac

./: .deps.json  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.org  build.sh  config.nims  default.nix  deps.nix  design.org  diod-build.sh  make-helpers.sh  metac.nim  metac.nimble  metac.nix  nimenv.cfg  rundev.sh  security-checklist.md
metac/: agent.nim  audio.nim  audio_client.nim  audio_protocol.nim  audio_pulse.nim  audio_sdl.nim  audio_service.nim  bindfd.c  blockdevice.capnp  bridge.c++  bridge.nim  bridge.service  cli.nim  cli_common.nim  cli_utils.nim  common_cli.nim  compute.capnp  compute_agent.nim  compute_agent.nim.cfg  compute_cli.nim  compute_common.nim  computevm_internal.capnp  computevm_service.nim  daemon.nim  desktop.capnp  desktop.nim  desktop_cli.nim  desktop_impl.nim  desktop_service.nim  desktop_x11.nim  flatdb.nim  fs.c++  fs.capnp  fs.h  fs.nim  fs_cli.nim  fs_client_util.nim  fs_impl.nim  fs_localfile.nim  fs_localfs.nim  (+68 more)
nix/: agent.nix  deb.nix  nim.nix  sshfs.nix  tigervnc.nix
py/metac/: core.py  desktop.py  fs.py  unix_http.py  vm.py
tests/: compute_test.nim  pubfd.c++  sctp_stdio.nim  signal_tool.nim  simple_service.py  test_audio_proto.nim  test_pa_loopback.nim  test_remote.nim  test_sctp.nim  vm_test.nim  vm_test.py
tests/vm/: simple.py
util/: build-agent.sh  build-devel.sh  build-diod.sh  build-schemas.sh  install-systemd.sh  rundev.sh  test-bindfd.py  test-connectfd.py
webui/: index.html  invalid-token.html  package.json  tsconfig.json  vendor-modules.sh  webpack.config.js
webui/src/: Aaa.ts  Hello.vue  core.tsx  desktop.tsx  fs.tsx  index.ts  index.tsx  react-vnc-display.d.ts  vm.tsx
